fix color and spacing of split view

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -32,7 +32,6 @@ body.scroll-lock {
       @apply top-0;
       @apply flex;
       @apply items-center;
-      @apply bg-white;
       @apply h-12;
       @apply z-10;
     }
